fix(core): align input shadows to be the same as for buttons (#213)

--- a/core/src/components/cat-input/cat-input.scss
+++ b/core/src/components/cat-input/cat-input.scss
@@ -36,8 +36,9 @@
   overflow: hidden;
   background: cat-token('color.ui.background.input');
   border-radius: cat-border-radius('m');
-  box-shadow: 0 0 0 1px cat-token('color.ui.border.dark');
+  box-shadow: inset 0 0 0 1px rgb(var(--border-color));
   transition: box-shadow cat-token('time.transition.s') linear;
+  --border-color: #{cat-token('color.ui.border.dark', $wrap: false)};
 
   &.input-round {
     border-radius: 10rem;
@@ -50,23 +51,16 @@
   }
 
   &:not(.input-disabled):hover {
-    box-shadow: 0 0 0 2px cat-token('color.ui.border.dark');
-
-    &.input-invalid {
-      box-shadow: 0 0 0 2px cat-token('color.theme.danger.bg', 0.2);
-    }
+    box-shadow: inset 0 0 0 1px rgb(var(--border-color)), 0 0 0 1px rgb(var(--border-color));
   }
 
-  &:not(.input-disabled):focus-within {
+  &:focus-within {
     outline: 2px solid cat-token('color.ui.border.focus');
-
-    &.input-invalid {
-      outline: 2px solid cat-token('color.theme.danger.bg', 0.2);
-    }
+    outline-offset: -1px;
   }
 
   &.input-invalid {
-    box-shadow: 0 0 0 1px cat-token('color.theme.danger.bg', 0.2);
+    --border-color: #{cat-token('color.theme.danger.bg', 0.2, $wrap: false)};
   }
 
   /* stylelint-disable property-no-vendor-prefix */
